Implementacion CSS y multilenguaje formularios Home, login y registro.

--- a/proyecto_2/progra_4/src/main/resources/messages.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages.properties
@@ -12,3 +12,14 @@ Direccion
 TituloTemplate
 Sistema
 Pie
+IniciarSesion
+Subtitulo
+Encabezado
+Idiomas
+Español
+Ingles
+Frances
+Proyecto
+PaginaInicio
+ID
+Contrasena
