--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -12,3 +12,15 @@ Direccion=Address
 TituloTemplate=TituloTemplate=Simplified Electronic Billing System
 Sistema=Billing System
 Pie=Web System
+IniciarSesion=Login
+Proyecto=Project I,2024
+Subtitulo=For the management of electronic invoices.
+Encabezado=Welcome to the simplified Electronic invoice web system!
+Frances=French
+Ingles=English
+Español=Spanish
+Idiomas=Languages
+PaginaInicio=Go to homepage
+ID=Identification number
+Contrasena=Password
+
