--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -12,3 +12,16 @@ Direccion=Direccion
 TituloTemplate=Sistema de facturación electrónica simplificada
 Sistema=Sistema de Facturación
 Pie=Sistema Web
+IniciarSesion= Iniciar Sesión
+Proyecto=Proyecto I, 2024
+Subtitulo=Para la gestión de facturas electrónicas.
+Encabezado=¡Bienvenidos al Sistema web de factura Electrónica simplificada!
+Frances=Francés
+Español=Español
+Ingles=Inglés
+Idiomas=Idiomas
+PaginaInicio=Ir a la página de inicio
+ID=Número de identificación
+Contrasena=Contraseña
+
+
