--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -10,5 +10,18 @@ Nombre=Nom
 Correo=Courrier
 Direccion=Adresse
 TituloTemplate=Système de facturation électronique simplifié
-Sistema=Billing System
+Sistema=Système de facturation
 Pie=Système Web
+IniciarSesion=Commencer la session
+Proyecto=Projet I, 2024
+Subtitulo=Pour la gestion des factures électroniques.
+Encabezado=Bienvenue dans le système Web simplifié de facture électronique !
+Frances=Français
+Español=Espagnol
+Ingles=Anglais
+Idiomas=Langues
+PaginaInicio=Aller à la page principale
+ID=Numéro d'identification
+Contrasena=Mot de passe
+
+
