Implementacion CSS y multilenguaje EN MENU PROVEEDORES.

--- a/proyecto_2/progra_4/src/main/resources/messages.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages.properties
@@ -23,3 +23,20 @@ Proyecto
 PaginaInicio
 ID
 Contrasena
+CASA
+CerrarSesion
+TarjetaH6
+TarjetaH4
+TarjetaH2
+Clientes
+Parrafo
+Tarjeta2H6
+Tarjeta2H4
+Tarjeta2H2
+Parrafo2
+Productos
+Facturas
+Parrafo3
+Tarjeta3H2
+Tarjeta3H4
+Tarjeta3H6
