--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -23,4 +23,20 @@ Idiomas=Languages
 PaginaInicio=Go to homepage
 ID=Identification number
 Contrasena=Password
-
+CerrarSesion=Logout
+CASA=Supplier Menu
+TarjetaH6=Regular customers of the Supplier
+TarjetaH4=Supplier interaction card with its customers
+TarjetaH2=Associate Clients
+Clientes=Customers
+Parrafo=This section displays customers who have made purchases from the selected supplier. This session also allows you to add customers
+Tarjeta2H6=Supplier's products or services.
+Tarjeta2H4=Supplier stock card with its services/products
+Tarjeta2H2=Related products or services
+Parrafo2=This card allows suppliers to take actions with the products or services they offer. For example: add products.
+Productos=Products
+Facturas=Bills
+Parrafo3=This card allows suppliers to perform actions with their invoices. For example: invoice your sales.
+Tarjeta3H2=Related invoices
+Tarjeta3H4=Supplier action card with your invoices
+Tarjeta3H6=Supplier invoices
