--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -23,5 +23,20 @@ Idiomas=Idiomas
 PaginaInicio=Ir a la página de inicio
 ID=Número de identificación
 Contrasena=Contraseña
-
-
+CerrarSesion= Cerrar Sesión
+Casa= Menu proveedores
+TarjetaH6=Clientes habituales del Proveedor
+TarjetaH4=Tarjeta de acciones del proveedor con sus clientes
+TarjetaH2=Asociar Clientes
+Clientes=Clientes
+Parrafo=En esta sección se muestran los clientes que han realizado compras al proveedor seleccionado. Esta sesión permite también agregar clientes
+Tarjeta2H6=Productos o servicios del proveedor.
+Tarjeta2H4=Tarjeta de acciones del proveedor con sus servicios/productos.
+Tarjeta2H2=Asociar Productos o servicios 
+Parrafo2=Esta tarjeta permite a los proveedores realizar acciones con los productos o servicios que ofrecen. Por ejemplo: Agregar productos.
+Productos=Productos
+Facturas=Facturas
+Parrafo3=Esta tarjeta permite a los proveedores realizar acciones con sus facturas. Por ejemplo: facturar sus ventas. 
+Tarjeta3H2=Asociar Facturas
+Tarjeta3H4=Tarjeta de acciones del proveedor con sus facturas
+Tarjeta3H6=Facturas del proveedor
