--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -23,5 +23,20 @@ Idiomas=Langues
 PaginaInicio=Aller à la page principale
 ID=Numéro d'identification
 Contrasena=Mot de passe
-
-
+CerrarSesion=Fermer la session
+CASA=Menu Fournisseur
+TarjetaH6=Clients réguliers du Fournisseur
+TarjetaH4=Interaction des fournisseurs avec leurs clients.
+TarjetaH2=Clients associés
+Clientes=Clients
+Parrafo=Cette section affiche les clients qui ont effectué des achats auprès du fournisseur sélectionné. Cette session vous permet également d'ajouter des clients
+Tarjeta2H6=Produits ou services du fournisseur
+Tarjeta2H4=Fichier de stock du fournisseur avec ses services/produits.
+Tarjeta2H2=Produits ou services associés
+Parrafo2=Cette carte permet aux fournisseurs d'entreprendre des actions avec les produits ou services qu'ils proposent. Par exemple:Ajoutez des produits.
+Productos=Produits
+Facturas=Factures
+Parrafo3=Cette carte permet aux fournisseurs d'effectuer des actions avec leurs factures. Par exemple : facturez vos ventes.
+Tarjeta3H2=Factures associées
+Tarjeta3H4=Fiche d'action fournisseur avec vos factures
+Tarjeta3H6=Factures fournisseurs
