--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -40,3 +40,8 @@ Parrafo3=This card allows suppliers to perform actions with their invoices. For 
 Tarjeta3H2=Related invoices
 Tarjeta3H4=Supplier action card with your invoices
 Tarjeta3H6=Supplier invoices
+Listado=Client List
+IDP=Supplier identification
+Regresar=Go back
+Agregar=Add client
+Editar=Edit client
