--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -40,3 +40,8 @@ Parrafo3=Esta tarjeta permite a los proveedores realizar acciones con sus factur
 Tarjeta3H2=Asociar Facturas
 Tarjeta3H4=Tarjeta de acciones del proveedor con sus facturas
 Tarjeta3H6=Facturas del proveedor
+Listado=Listado de Clientes
+IDP=Identificación del proveedor
+Regresar=Regresar
+Agregar=Agregar Cliente 
+Editar=Editar
