--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -40,3 +40,8 @@ Parrafo3=Cette carte permet aux fournisseurs d'effectuer des actions avec leurs 
 Tarjeta3H2=Factures associées
 Tarjeta3H4=Fiche d'action fournisseur avec vos factures
 Tarjeta3H6=Factures fournisseurs
+Listado=Liste de clients
+IDP=Identification du fournisseur
+Regresar=Retourner
+Agregar=Ajouter un client
+Editar=Modifier
