Multi lenguaje Facturas

--- a/proyecto_2/progra_4/src/main/resources/messages.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages.properties
@@ -45,3 +45,25 @@ IDP
 Agregar
 Regresar
 Editar
+
+
+ListadoF
+FacturaID
+ProveedorID
+ClienteID
+ProductoID
+Precio
+Fecha
+Cantidad
+Total
+Acciones
+NuevaF
+GenerarPDF
+GenerarXML
+Facturacion
+Factura
+Facturar
+Descripcion
+IDCliente
+IDProducto
+CantidadF
