--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -45,3 +45,25 @@ IDP=Identificación del proveedor
 Regresar=Regresar
 Agregar=Agregar Cliente 
 Editar=Editar
+
+
+ListadoF=Listado de Facturas
+FacturaID=Factura ID
+ProveedorID=Proveedor
+ClienteID=Cliente
+ProductoID=Producto
+Precio=Precio
+Fecha=Fecha
+Cantidad=Cantidad
+Total=Total
+Acciones=Acciones
+NuevaF=Nueva Factura
+GenerarPDF=Generar PDF de Facturas
+GenerarXML=Generar XML de Facturas
+Facturacion=Facturación
+Factura=Factura
+Facturar=Facturar
+Descripcion=Descripción
+IDCliente=ID del Cliente:
+IDProducto=ID del Producto:
+CantidadF=Cantidad a facturar:
