--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -45,3 +45,25 @@ IDP=Identification du fournisseur
 Regresar=Retourner
 Agregar=Ajouter un client
 Editar=Modifier
+
+
+ListadoF=Liste des factures
+FacturaID=Numéro de facture
+ProveedorID=Fournisseur
+ClienteID=Client
+ProductoID=Produit
+Precio=Montant
+Fecha=Date
+Cantidad=Quantité
+Total=Totale
+Acciones=Actions
+NuevaF=Nouvelle facture
+GenerarPDF=Générer un PDF de factures
+GenerarXML=Générer un XML de factures
+Facturacion=Facturation
+Factura=Facture
+Facturar=Facturer
+Descripcion=Description
+IDCliente=Identité du client
+IDProducto=Identifiant du produit
+CantidadF=Montant à facturer
