--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -45,3 +45,25 @@ IDP=Supplier identification
 Regresar=Go back
 Agregar=Add client
 Editar=Edit client
+
+
+ListadoF=Bill List
+FacturaID=Bill ID
+ProveedorID=Supplier ID
+ClienteID=Customer ID
+ProductoID=Product ID
+Precio=Price
+Fecha=Date
+Cantidad=Quantity
+Total=Total
+Acciones=Actions
+NuevaF=New Bill
+GenerarPDF=Generate PDF of Invoices
+GenerarXML=Generate XML of Invoices
+Facturacion=Invoicing
+Factura=Bill
+Facturar=Bill
+Descripcion=Description
+IDCliente=Customer ID
+IDProducto=Product ID
+CantidadF=Amount to Bill
