Multilenguaje faltante de cliente y productos

--- a/proyecto_2/progra_4/src/main/resources/messages.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages.properties
@@ -38,6 +38,7 @@ Productos
 Facturas
 Parrafo3
 Tarjeta3H2
+Mensaje
 Tarjeta3H4
 Tarjeta3H6
 Listado
@@ -45,6 +46,7 @@ IDP
 Agregar
 Regresar
 Editar
+Perfil
 
 
 ListadoF
@@ -67,3 +69,11 @@ Descripcion
 IDCliente
 IDProducto
 CantidadF
+
+TituloProducto
+Guardar
+TipoProducto
+EditarProductos
+Codigo
+ListadoP
+NuevoP
