--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -67,3 +67,15 @@ Descripcion=Description
 IDCliente=Customer ID
 IDProducto=Product ID
 CantidadF=Amount to Bill
+
+Mensaje=A customer has been successfully registered!!
+
+TituloProducto=New product
+Guardar=Save
+TipoProducto=Kind of product
+
+Perfil=Customer profile configuration
+EditarProductos= Edit products
+Codigo=Code
+ListadoP=Products List
+NuevoP=New product
