--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -45,6 +45,9 @@ IDP=Identificación del proveedor
 Regresar=Regresar
 Agregar=Agregar Cliente 
 Editar=Editar
+Mensaje=Se registró exitosamente un cliente!!
+ListadoP=Listado de Productos
+NuevoP=Nuevo Producto
 
 
 ListadoF=Listado de Facturas
@@ -67,3 +70,11 @@ Descripcion=Descripción
 IDCliente=ID del Cliente:
 IDProducto=ID del Producto:
 CantidadF=Cantidad a facturar:
+
+TituloProducto=Nuevo Producto
+Guardar=Guardar
+TipoProducto=Tipo de Producto
+
+Perfil=Configuración perfil cliente
+EditarProductos= Editar Productos
+Codigo= Código
