--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -45,6 +45,9 @@ IDP=Identification du fournisseur
 Regresar=Retourner
 Agregar=Ajouter un client
 Editar=Modifier
+Mensaje=Un client a été enregistré avec succès!!
+
+TituloProducto=Nouveau produit
 
 
 ListadoF=Liste des factures
@@ -67,3 +70,11 @@ Descripcion=Description
 IDCliente=Identité du client
 IDProducto=Identifiant du produit
 CantidadF=Montant à facturer
+
+Guardar=Sauvegarder
+TipoProducto=Type de produit
+Perfil=Configuration du profil client
+EditarProductos=Modifier les produits
+Codigo=Code du produit
+ListadoP=Liste des produits
+NuevoP=Nouveau produit
