Multi lenguaje Facturas

--- a/proyecto_2/progra_4/src/main/resources/messages.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages.properties
@@ -67,3 +67,12 @@ Descripcion
 IDCliente
 IDProducto
 CantidadF
+
+FormularioP
+Tipo
+Actividad
+Servicios
+Consumibles
+Infraestructura
+Bienes
+Telefono
