--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -67,3 +67,12 @@ Descripcion=Description
 IDCliente=Customer ID
 IDProducto=Product ID
 CantidadF=Amount to Bill
+
+FormularioP=Supplier Form
+Tipo=Type (Physical/Legal)
+Actividad=Comercial activity
+Servicios=Services
+Consumibles=Consumables
+Infraestructura=Infrastructure
+Bienes=Estate
+Telefono=Phone
