--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -67,3 +67,12 @@ Descripcion=Descripción
 IDCliente=ID del Cliente:
 IDProducto=ID del Producto:
 CantidadF=Cantidad a facturar:
+
+FormularioP=Formulario de Proveedores
+Tipo=Tipo (Físico/Jurídico)
+Actividad=Actividad Comercial
+Servicios=Servicios
+Consumibles=Consumibles
+Infraestructura=Infraestructura
+Bienes=Bienes
+Telefono=Teléfono
