--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -67,3 +67,12 @@ Descripcion=Description
 IDCliente=Identité du client
 IDProducto=Identifiant du produit
 CantidadF=Montant à facturer
+
+FormularioP=Formulaire fournisseur
+Tipo=Type (physique/juridique)
+Actividad=Activité commerciale
+Servicios=Prestations de service
+Consumibles=Consommables
+Infraestructura=Prestations de service
+Bienes=Marchandises
+Telefono=Numéro de téléphone
