Multi lenguaje Facturas

--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -18,7 +18,7 @@ Subtitulo=For the management of electronic invoices.
 Encabezado=Welcome to the simplified Electronic invoice web system!
 Frances=French
 Ingles=English
-Español=Spanish
+Espanol=Spanish
 Idiomas=Languages
 PaginaInicio=Go to homepage
 ID=Identification number
