--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -1,35 +1,35 @@
 Registrar=Registrar
 Titulo=Registro de Clientes
 RegistroClientes=Registro de Clientes
-TipoCedula=Tipo de CÃ©dula
-TipoCedulaNinguna=Tipo de cÃ©dula
-TipoCedulaJuridica=CÃ©dula JurÃ­dica
-TipoCedulaFisica=CÃ©dula FÃ­sica
-Cedula=CÃ©dula
+TipoCedula=Tipo de Cédula
+TipoCedulaNinguna=Tipo de cédula
+TipoCedulaJuridica=Cédula Jurídica
+TipoCedulaFisica=Cédula Física
+Cedula=Cédula
 Nombre=Nombre
 Correo=Correo
 Direccion=Direccion
-TituloTemplate=Sistema de facturaciÃ³n electrÃ³nica simplificada
-Sistema=Sistema de FacturaciÃ³n
+TituloTemplate=Sistema de facturación electrónica simplificada
+Sistema=Sistema de Facturación
 Pie=Sistema Web
-IniciarSesion= Iniciar SesiÃ³n
+IniciarSesion= Iniciar Sesión
 Proyecto=Proyecto I, 2024
-Subtitulo=Para la gestiÃ³n de facturas electrÃ³nicas.
-Encabezado=Â¡Bienvenidos al Sistema web de factura ElectrÃ³nica simplificada!
-Frances=FrancÃ©s
-EspaÃ±ol=EspaÃ±ol
-Ingles=InglÃ©s
+Subtitulo=Para la gestión de facturas electrónicas.
+Encabezado=Bienvenidos al Sistema web de factura Electrónica simplificada!
+Frances=Francés
+Espanol=Español
+Ingles=Inglés
 Idiomas=Idiomas
-PaginaInicio=Ir a la pÃ¡gina de inicio
-ID=NÃºmero de identificaciÃ³n
-Contrasena=ContraseÃ±a
-CerrarSesion= Cerrar SesiÃ³n
+PaginaInicio=Ir a la página de inicio
+ID=Número de identificación
+Contrasena=Contraseña
+CerrarSesion= Cerrar Sesión
 Casa= Menu proveedores
 TarjetaH6=Clientes habituales del Proveedor
 TarjetaH4=Tarjeta de acciones del proveedor con sus clientes
 TarjetaH2=Asociar Clientes
 Clientes=Clientes
-Parrafo=En esta secciÃ³n se muestran los clientes que han realizado compras al proveedor seleccionado. Esta sesiÃ³n permite tambiÃ©n agregar clientes
+Parrafo=En esta sección se muestran los clientes que han realizado compras al proveedor seleccionado. Esta sesión permite también agregar clientes
 Tarjeta2H6=Productos o servicios del proveedor.
 Tarjeta2H4=Tarjeta de acciones del proveedor con sus servicios/productos.
 Tarjeta2H2=Asociar Productos o servicios 
@@ -41,11 +41,11 @@ Tarjeta3H2=Asociar Facturas
 Tarjeta3H4=Tarjeta de acciones del proveedor con sus facturas
 Tarjeta3H6=Facturas del proveedor
 Listado=Listado de Clientes
-IDP=IdentificaciÃ³n del proveedor
+IDP=Identificación del proveedor
 Regresar=Regresar
 Agregar=Agregar Cliente 
 Editar=Editar
-Mensaje=Se registrÃ³ exitosamente un cliente!!
+Mensaje=Se registró exitosamente un cliente!!
 ListadoP=Listado de Productos
 NuevoP=Nuevo Producto
 
@@ -62,28 +62,28 @@ Acciones=Acciones
 NuevaF=Nueva Factura
 GenerarPDF=Generar PDF de Facturas
 GenerarXML=Generar XML de Facturas
-Facturacion=FacturaciÃ³n
+Facturacion=Facturación
 Factura=Factura
 Facturar=Facturar
-Descripcion=DescripciÃ³n
+Descripcion=Descripción
 IDCliente=ID del Cliente:
 IDProducto=ID del Producto:
 CantidadF=Cantidad a facturar:
 
 FormularioP=Formulario de Proveedores
-Tipo=Tipo (FÃ­sico/JurÃ­dico)
+Tipo=Tipo (Físico/Jurídico)
 Actividad=Actividad Comercial
 Servicios=Servicios
 Consumibles=Consumibles
 Infraestructura=Infraestructura
 Bienes=Bienes
-Telefono=TelÃ©fono
+Telefono=Teléfono
 
 TituloProducto=Nuevo Producto
 Guardar=Guardar
 TipoProducto=Tipo de Producto
 
-Perfil=ConfiguraciÃ³n perfil cliente
+Perfil=Configuración perfil cliente
 EditarProductos= Editar Productos
-Codigo= CÃ³digo
+Codigo= Código
 
