--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -1,43 +1,43 @@
 Registrar=Inscription
 Titulo=Inscription des clients
-RegistroClientes=InscripciÃ³n de clientes
-TipoCedula=Type de carte d'identitÃ©
-TipoCedulaNinguna=Type de carte d'identitÃ©
-TipoCedulaJuridica=Carte d'identitÃ© juridique
-TipoCedulaFisica=Carte d'identitÃ© physique
-Cedula=Carte d'identitÃ©
+RegistroClientes=Inscripción de clientes
+TipoCedula=Type de carte d'identité
+TipoCedulaNinguna=Type de carte d'identité
+TipoCedulaJuridica=Carte d'identité juridique
+TipoCedulaFisica=Carte d'identité physique
+Cedula=Carte d'identité
 Nombre=Nom
 Correo=Courrier
 Direccion=Adresse
-TituloTemplate=SystÃ¨me de facturation Ã©lectronique simplifiÃ©
-Sistema=SystÃ¨me de facturation
-Pie=SystÃ¨me Web
+TituloTemplate=Système de facturation électronique simplifié
+Sistema=Système de facturation
+Pie=Système Web
 IniciarSesion=Commencer la session
 Proyecto=Projet I, 2024
-Subtitulo=Pour la gestion des factures Ã©lectroniques.
-Encabezado=Bienvenue dans le systÃ¨me Web simplifiÃ© de facture Ã©lectronique !
-Frances=FranÃ§ais
-EspaÃ±ol=Espagnol
+Subtitulo=Pour la gestion des factures électroniques.
+Encabezado=Bienvenue dans le système Web simplifié de facture électronique !
+Frances=Français
+Espanol=Espagnol
 Ingles=Anglais
 Idiomas=Langues
-PaginaInicio=Aller Ã  la page principale
-ID=NumÃ©ro d'identification
+PaginaInicio=Aller à la page principale
+ID=Numéro d'identification
 Contrasena=Mot de passe
 CerrarSesion=Fermer la session
 CASA=Menu Fournisseur
-TarjetaH6=Clients rÃ©guliers du Fournisseur
+TarjetaH6=Clients réguliers du Fournisseur
 TarjetaH4=Interaction des fournisseurs avec leurs clients.
-TarjetaH2=Clients associÃ©s
+TarjetaH2=Clients associés
 Clientes=Clients
-Parrafo=Cette section affiche les clients qui ont effectuÃ© des achats auprÃ¨s du fournisseur sÃ©lectionnÃ©. Cette session vous permet Ã©galement d'ajouter des clients
+Parrafo=Cette section affiche les clients qui ont effectué des achats auprès du fournisseur sélectionné. Cette session vous permet également d'ajouter des clients
 Tarjeta2H6=Produits ou services du fournisseur
 Tarjeta2H4=Fichier de stock du fournisseur avec ses services/produits.
-Tarjeta2H2=Produits ou services associÃ©s
+Tarjeta2H2=Produits ou services associés
 Parrafo2=Cette carte permet aux fournisseurs d'entreprendre des actions avec les produits ou services qu'ils proposent. Par exemple:Ajoutez des produits.
 Productos=Produits
 Facturas=Factures
 Parrafo3=Cette carte permet aux fournisseurs d'effectuer des actions avec leurs factures. Par exemple : facturez vos ventes.
-Tarjeta3H2=Factures associÃ©es
+Tarjeta3H2=Factures associées
 Tarjeta3H4=Fiche d'action fournisseur avec vos factures
 Tarjeta3H6=Factures fournisseurs
 Listado=Liste de clients
@@ -45,40 +45,40 @@ IDP=Identification du fournisseur
 Regresar=Retourner
 Agregar=Ajouter un client
 Editar=Modifier
-Mensaje=Un client a Ã©tÃ© enregistrÃ© avec succÃ¨s!!
+Mensaje=Un client a été enregistré avec succès!!
 
 TituloProducto=Nouveau produit
 
 
 ListadoF=Liste des factures
-FacturaID=NumÃ©ro de facture
+FacturaID=Numéro de facture
 ProveedorID=Fournisseur
 ClienteID=Client
 ProductoID=Produit
 Precio=Montant
 Fecha=Date
-Cantidad=QuantitÃ©
+Cantidad=Quantité
 Total=Totale
 Acciones=Actions
 NuevaF=Nouvelle facture
-GenerarPDF=GÃ©nÃ©rer un PDF de factures
-GenerarXML=GÃ©nÃ©rer un XML de factures
+GenerarPDF=Générer un PDF de factures
+GenerarXML=Générer un XML de factures
 Facturacion=Facturation
 Factura=Facture
 Facturar=Facturer
 Descripcion=Description
-IDCliente=IdentitÃ© du client
+IDCliente=Identité du client
 IDProducto=Identifiant du produit
-CantidadF=Montant Ã  facturer
+CantidadF=Montant à facturer
 
 FormularioP=Formulaire fournisseur
 Tipo=Type (physique/juridique)
-Actividad=ActivitÃ© commerciale
+Actividad=Activité commerciale
 Servicios=Prestations de service
 Consumibles=Consommables
 Infraestructura=Prestations de service
 Bienes=Marchandises
-Telefono=NumÃ©ro de tÃ©lÃ©phone
+Telefono=Numéro de téléphone
 
 Guardar=Sauvegarder
 TipoProducto=Type de produit
