Configuracion del prefil del proveedor

--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -84,8 +84,12 @@ Guardar=Save
 TipoProducto=Kind of product
 
 Perfil=Customer profile configuration
+PerfilP=Provider Profile Settings
 EditarProductos= Edit products
 Codigo=Code
 ListadoP=Products List
 NuevoP=New product
-
+Proveedores=Suppliers
+PP=Supplier profile 
+TarjetaP=Provider Profile Settings
+ParrafoP=This section shows the provider's details. This session also allows you to edit the supplier's data.
