--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -87,3 +87,8 @@ Perfil=Configuración perfil cliente
 EditarProductos= Editar Productos
 Codigo= Código
 
+PerfilP=Configuración perfil proveedor
+Proveedores=Proveedores
+PP=Perfil Proveedor
+TarjetaP=Configuración de perfil del proveedor
+ParrafoP=En esta sección se muestran los datos del proveedor. Esta sesión permite también editar los datos del proveedor.
