--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -82,8 +82,15 @@ Telefono=Numéro de téléphone
 
 Guardar=Sauvegarder
 TipoProducto=Type de produit
-Perfil=Configuration du profil client
+Perfil=Paramètres du profil client
+PerfilP=Paramètres du profil du fournisseur
+
+
 EditarProductos=Modifier les produits
 Codigo=Code du produit
 ListadoP=Liste des produits
 NuevoP=Nouveau produit
+Proveedores=Fournisseurs
+PP=Profil du fournisseur
+TarjetaP=Paramètres du profil du fournisseur
+ParrafoP=This section shows the provider's details. This session also allows you to edit the supplier's data.
