Multi lenguaje Lista proveedor

--- a/proyecto_2/progra_4/src/main/resources/messages_en.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_en.properties
@@ -89,3 +89,9 @@ Codigo=Code
 ListadoP=Products List
 NuevoP=New product
 
+ListadoProvedores=Supplier List
+Proveedor=Supplier ID
+TipoProveedor=Supplier Type
+Estado=Status
+Aceptar=Accept
+Rechazar=Reject
