--- a/proyecto_2/progra_4/src/main/resources/messages_es.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_es.properties
@@ -87,3 +87,9 @@ Perfil=Configuración perfil cliente
 EditarProductos= Editar Productos
 Codigo= Código
 
+ListadoProvedores=Listado de Proveedores
+Proveedor=Proveedor ID
+TipoProveedor=Tipo de Proveedor
+Estado=Estado
+Aceptar=Aceptar
+Rechazar=Rechazar
