--- a/proyecto_2/progra_4/src/main/resources/messages_fr.properties
+++ b/proyecto_2/progra_4/src/main/resources/messages_fr.properties
@@ -87,3 +87,10 @@ EditarProductos=Modifier les produits
 Codigo=Code du produit
 ListadoP=Liste des produits
 NuevoP=Nouveau produit
+
+ListadoProvedores=Liste des fournisseurs
+Proveedor=Identifiant du fournisseur
+TipoProveedor=Type de fournisseur
+Estado=État
+Aceptar=Accepter
+Rechazar=Rejeter
